yyamamoto+sesetup@salesforce.com/src/objects/CustomObject8__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>請求</label>
        <referenceTo>CustomObject6__c</referenceTo>
        <relationshipLabel>入金</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>入金日</label>
        <type>Date</type>
    </fields>
    <label>入金</label>
    <nameField>
        <displayFormat>P{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>入金番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>